--- a/NoDecentDiary/NoDecentDiary.csproj
+++ b/NoDecentDiary/NoDecentDiary.csproj
@@ -52,6 +52,8 @@
 
     <ItemGroup>
       <PackageReference Include="Masa.Blazor" Version="0.6.0" />
+      <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+      <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.3" />
     </ItemGroup>
 
 </Project>
