--- a/NoDecentDiary/Platforms/MacCatalyst/Info.plist
+++ b/NoDecentDiary/Platforms/MacCatalyst/Info.plist
@@ -26,5 +26,9 @@
     </array>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/appicon.appiconset</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs access to the photo gallery to save photos and videos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to the photo gallery to save photos and videos.</string>
 </dict>
 </plist>
