fix() : Diary copy content error

--- a/NoDecentDiary/NoDecentDiary.csproj
+++ b/NoDecentDiary/NoDecentDiary.csproj
@@ -66,6 +66,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="myapp.keystore" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Include="..\.editorconfig" Link=".editorconfig" />
 	</ItemGroup>
 
