--- a/NoDecentDiary/NoDecentDiary.csproj
+++ b/NoDecentDiary/NoDecentDiary.csproj
@@ -77,7 +77,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Masa.Blazor" Version="1.0.0-preview.1" />
+		<PackageReference Include="Masa.Blazor" Version="0.6.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.3" />
 		<PackageReference Include="Serilog" Version="2.12.0" />
