feat(PageMine): add feedback

--- a/NoDecentDiary/Platforms/MacCatalyst/Info.plist
+++ b/NoDecentDiary/Platforms/MacCatalyst/Info.plist
@@ -38,5 +38,9 @@
 	<string>This app needs access to the photo gallery for picking photos and videos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs access to photos gallery for picking photos and videos.</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>mailto</string>
+	</array>
 </dict>
 </plist>
