--- a/NoDecentDiary/NoDecentDiary.csproj
+++ b/NoDecentDiary/NoDecentDiary.csproj
@@ -78,6 +78,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Masa.Blazor" Version="0.6.0" />
+		<PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.3" />
 		<PackageReference Include="Serilog" Version="2.12.0" />
