--- a/NoDecentDiary/Platforms/Android/AndroidManifest.xml
+++ b/NoDecentDiary/Platforms/Android/AndroidManifest.xml
@@ -10,5 +10,17 @@
 		<intent>
 			<action android:name="android.media.action.IMAGE_CAPTURE" />
 		</intent>
+		<intent>
+			<action android:name="android.intent.action.SENDTO" />
+			<data android:scheme="mailto" />
+		</intent>
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+			<data android:scheme="http"/>
+		</intent>
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+			<data android:scheme="https"/>
+		</intent>
 	</queries>
 </manifest>
