style: delete invalid using

--- a/NoDecentDiary/Platforms/iOS/Info.plist
+++ b/NoDecentDiary/Platforms/iOS/Info.plist
@@ -43,6 +43,7 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>mailto</string>
+		<string>itms-apps</string>
 	</array>
 </dict>
 </plist>
