--- a/NoDecentDiary/Platforms/MacCatalyst/Info.plist
+++ b/NoDecentDiary/Platforms/MacCatalyst/Info.plist
@@ -41,6 +41,7 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>mailto</string>
+		<string>itms-apps</string>
 	</array>
 </dict>
 </plist>
