--- a/SwashbucklerDiary/SwashbucklerDiary.csproj
+++ b/SwashbucklerDiary/SwashbucklerDiary.csproj
@@ -12,6 +12,7 @@
         <SingleProject>true</SingleProject>
         <ImplicitUsings>enable</ImplicitUsings>
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
+		<NullabilityInfoContextSupport>true</NullabilityInfoContextSupport>
 
         <!-- Display name -->
         <ApplicationTitle>侠客日记</ApplicationTitle>
