--- a/SwashbucklerDiary/SwashbucklerDiary.csproj
+++ b/SwashbucklerDiary/SwashbucklerDiary.csproj
@@ -74,15 +74,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui.Core" Version="4.0.0" />
 		<PackageReference Include="Masa.Blazor" Version="1.0.0-preview.3" />
 		<PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
-		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.3" />
+		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.4" />
 		<PackageReference Include="Serilog" Version="2.12.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-		<PackageReference Include="SqlSugarCore" Version="5.1.3.51" />
+		<PackageReference Include="SqlSugarCore" Version="5.1.3.52" />
 	</ItemGroup>
 
 </Project>
