🆕 feat: add StatusBarColor and fixed some bugs

--- a/SwashbucklerDiary/Platforms/MacCatalyst/Info.plist
+++ b/SwashbucklerDiary/Platforms/MacCatalyst/Info.plist
@@ -43,5 +43,7 @@
 		<string>mailto</string>
 		<string>itms-apps</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
