--- a/SwashbucklerDiary/SwashbucklerDiary.csproj
+++ b/SwashbucklerDiary/SwashbucklerDiary.csproj
@@ -82,7 +82,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.0.0" />
-		<PackageReference Include="Masa.Blazor" Version="1.0.0-preview.12" />
+		<PackageReference Include="Masa.Blazor" Version="1.0.0-preview.14" />
 		<PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
 		<PackageReference Include="Serilog.Sinks.SQLite.Maui" Version="1.0.1" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
@@ -90,7 +90,7 @@
 		<PackageReference Include="Serilog" Version="2.12.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
-		<PackageReference Include="SqlSugarCore" Version="5.1.4.60-preview02" />
+		<PackageReference Include="SqlSugarCore" Version="5.1.4.66" />
 		<PackageReference Include="WebDav.Client" Version="2.8.0" />
 	</ItemGroup>
 
