--- a/SwashbucklerDiary/SwashbucklerDiary.csproj
+++ b/SwashbucklerDiary/SwashbucklerDiary.csproj
@@ -90,7 +90,7 @@
 		<PackageReference Include="Serilog" Version="2.12.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
-		<PackageReference Include="SqlSugarCore" Version="5.1.4.66" />
+		<PackageReference Include="SqlSugarCore" Version="5.1.4.67-preview15" />
 		<PackageReference Include="WebDav.Client" Version="2.8.0" />
 	</ItemGroup>
 
