🔥 chore: Remove invalid files

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /myapp.keystore
 /SwashbucklerDiary/myapp.keystore
 /SwashbucklerDiary/wwwroot/css/masa-blazor.min.css
+/SwashbucklerDiary/wwwroot/css/masa-blazor.min.css
