--- a/SwashbucklerDiary/Platforms/MacCatalyst/Info.plist
+++ b/SwashbucklerDiary/Platforms/MacCatalyst/Info.plist
@@ -6,6 +6,7 @@
     <array>
         <integer>1</integer>
         <integer>2</integer>
+		<integer>6</integer>
     </array>
     <key>UIRequiredDeviceCapabilities</key>
     <array>
