--- a/SwashbucklerDiary/Platforms/Android/AndroidManifest.xml
+++ b/SwashbucklerDiary/Platforms/Android/AndroidManifest.xml
@@ -5,6 +5,7 @@
 				 android:roundIcon="@mipmap/appicon_round"
 				 android:supportsRtl="true">
 	</application>
+	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="32" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
