--- a/SwashbucklerDiary/Platforms/Android/AndroidManifest.xml
+++ b/SwashbucklerDiary/Platforms/Android/AndroidManifest.xml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <application android:allowBackup="true"
+	<application android:allowBackup="true"
 				 android:icon="@mipmap/appicon"
 				 android:roundIcon="@mipmap/appicon_round"
-				 android:supportsRtl="true">
+				 android:supportsRtl="true"
+				 android:hardwareAccelerated="true">
 	</application>
 	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="32" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.CAMERA" />
