🆕 feat(PreviewImageDialog): add image zoom

--- a/SwashbucklerDiary/wwwroot/json/open-source-project/open-source-project.json
+++ b/SwashbucklerDiary/wwwroot/json/open-source-project/open-source-project.json
@@ -98,5 +98,10 @@
     "Name": "Vditor",
     "License": "MIT license",
     "Url": "https://github.com/Vanessa219/vditor/blob/master/LICENSE"
+  },
+  {
+    "Name": "Zoom",
+    "License": "MIT license",
+    "Url": "https://github.com/anitasv/zoom/blob/master/LICENSE"
   }
 ]
