♻️ refactor(Sponsor): Add SponsorPage

--- a/SwashbucklerDiary/wwwroot/json/app-functions/app-functions.json
+++ b/SwashbucklerDiary/wwwroot/json/app-functions/app-functions.json
@@ -293,6 +293,6 @@
     "Name": "About.Sponsor.Name",
     "Icon": "mdi-hand-heart-outline",
     "Path": "About.Sponsor.Path",
-    "Href": "about"
+    "Href": "sponsor"
   }
 ]
