--- a/SwashbucklerDiary/SwashbucklerDiary.csproj
+++ b/SwashbucklerDiary/SwashbucklerDiary.csproj
@@ -112,10 +112,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="ClosedXML" Version="0.102.1" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
 		<PackageReference Include="Masa.Blazor" Version="1.0.4" />
 		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.11" />
-		<PackageReference Include="MiniExcel" Version="1.31.2" />
 		<PackageReference Include="Serilog" Version="3.0.1" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
 		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
