💄 style: update style

--- a/SwashbucklerDiary/wwwroot/json/open-source-project/open-source-project.json
+++ b/SwashbucklerDiary/wwwroot/json/open-source-project/open-source-project.json
@@ -76,7 +76,7 @@
   },
   {
     "Name": "SqlSugar",
-    "License": "Apache-2.0 license",
+    "License": "MIT license",
     "Url": "https://github.com/DotNetNext/SqlSugar/blob/master/LICENSE"
   },
   {
