--- a/src/SwashbucklerDiary.Maui/Platforms/MacCatalyst/Info.plist
+++ b/src/SwashbucklerDiary.Maui/Platforms/MacCatalyst/Info.plist
@@ -55,5 +55,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>zh-CN</string>
 </dict>
 </plist>
