♻️ refactor: Optimize the pick of images and videos on mac OS

--- a/src/SwashbucklerDiary.Maui/Platforms/MacCatalyst/Entitlements.plist
+++ b/src/SwashbucklerDiary.Maui/Platforms/MacCatalyst/Entitlements.plist
@@ -21,6 +21,8 @@
 		<true/>
 		<key>com.apple.security.personal-information.photos-library</key>
 		<true/>
+		<key>com.apple.security.device.camera</key>
+		<true/>
     </dict>
 </plist>
 
