--- a/src/SwashbucklerDiary.Rcl/SwashbucklerDiary.Rcl.csproj
+++ b/src/SwashbucklerDiary.Rcl/SwashbucklerDiary.Rcl.csproj
@@ -8,9 +8,12 @@
 		<SupportedPlatform Include="browser" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="ClosedXML" Version="0.102.2" />
 		<PackageReference Include="Masa.Blazor" Version="1.3.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
-		<PackageReference Include="ClosedXML" Version="0.102.1" />
+		<PackageReference Include="Serilog" Version="3.1.1" />
+		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\SwashbucklerDiary.Shared\SwashbucklerDiary.Shared.csproj" />
