--- a/src/SwashbucklerDiary.WebAssembly/SwashbucklerDiary.WebAssembly.csproj
+++ b/src/SwashbucklerDiary.WebAssembly/SwashbucklerDiary.WebAssembly.csproj
@@ -7,6 +7,7 @@
 		<ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
 		<Version>1.0.0</Version>
 		<WasmBuildNative>true</WasmBuildNative>
+		<NullabilityInfoContextSupport>true</NullabilityInfoContextSupport>
 
 		<!-- workaround for publish -->
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
