🚸 improve: change default setting

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -14,8 +14,8 @@
   "WebDAVServerAddress": "",
   "WebDAVAccount": "",
   "WebDAVPassword": "",
-  "WelcomeText": true,
-  "Date": true,
+  "WelcomeText": false,
+  "Date": false,
   "DiaryCardIcon": false,
   "AlertTimeout": 3000,
   "WebDAVCopyResources": false,
