♻️ refactor(Setting): Use appropriate names and types

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -8,14 +8,12 @@
   "PrivacyMode": true,
   "PrivatePassword": "",
   "BackupsPath": "",
-  "ThemeState": 0,
+  "Theme": 0,
   "FirstSetLanguage": false,
   "FirstAgree": false,
-  "WebDAVServerAddress": "",
-  "WebDAVAccount": "",
-  "WebDAVPassword": "",
+  "WebDavConfig": "",
   "WelcomeText": false,
-  "Date": false,
+  "IndexDate": false,
   "DiaryCardIcon": false,
   "AlertTimeout": 3000,
   "WebDAVCopyResources": false,
