🆕 feat: add StatisticsCard setting

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/setting/settings.json
@@ -21,5 +21,6 @@
   "AchievementsAlert": true,
   "LANDeviceName": "",
   "LANScanPort": 5299,
-  "LANTransmissionPort": 52099
+  "LANTransmissionPort": 52099,
+  "StatisticsCard": true
 }
